--- a/palyak.html
+++ b/palyak.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pályák</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-     <div> <table class="tablazat">
+     <div>
+        <h1>Pályák</h1>
+        <table class="tablazat">
                 <tr>
                     <th>Pálya</th>
                     <th>Helyszín</th>
@@ -78,5 +80,13 @@
                 </tr>
         </table>
      </div>
+     <table >
+        <tr>
+            <td><img src="montec.jpg" alt="Monte Carlo" title="Monte Carlo"></td>
+            <td><img src="RallyF.JPG" alt="Rally Finnland" title="1000 Lakes Rally"></td>
+            <td><img src="Acro.jpg" alt="Acropolis" title="Acropolis Rally"></td>
+            <td><img src="safari.jpg" alt="Safari Rally" title="Saafri Rally"></td>
+        </tr>
+     </table>
 </body>
 </html>
